Update port number to 80

--- a/complete/Dockerfile
+++ b/complete/Dockerfile
@@ -4,6 +4,6 @@ COPY target/gs-spring-boot-0.1.0.jar /opt/app.jar
 
 ARG JVM_OPTS
 ENV JVM_OPTS=${JVM_OPTS}
-EXPOSE 8080
+EXPOSE 80
 
-CMD java ${JVM_OPTS} -jar /opt/app.jar
+CMD java ${JVM_OPTS} -jar /opt/app.jar --server.port=80
